[project]
name = "venvalid"
version = "0.1.0"
description = "A minimal and developer-friendly environment variable validator for Python, inspired by envalid."
authors = [{ name = "PinnLabs", email = "it@pinnlabs.online" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["env", "dotenv", "validation", "envalid", "configuration"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
]

[project.urls]
Homepage = "https://github.com/pinnlabs/venvalid"
Repository = "https://github.com/pinnlabs/venvalid"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

